--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
     v2.0 | 20110126
     License: none (public domain)
@@ -85,11 +84,26 @@ a, button, li {
   cursor: pointer;
 }
 
+a:hover, li:hover {
+  transform: scale(1.1);
+}
+
 .container {
   display: flex;
   height: 100vh;
   font-family: "Roboto-Medium", sans-serif;
   font-weight: 500;
+}
+@media screen and (max-width: 540px) {
+  .container {
+    display: block;
+    padding: 0 25px 10px 25px;
+    overflow-y: scroll;
+    background-image: url("../img/background.png");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
 }
 .container .left-column {
   position: relative;
@@ -99,6 +113,15 @@ a, button, li {
 @media screen and (max-width: 992px) {
   .container .left-column {
     max-width: 38%;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .left-column {
+    max-width: 100%;
+    padding: 0 50px;
+    margin: 0 auto;
+    height: -moz-fit-content;
+    height: fit-content;
   }
 }
 .container .left-column_photo {
@@ -112,6 +135,12 @@ a, button, li {
        object-fit: cover;
   }
 }
+@media screen and (max-width: 540px) {
+  .container .left-column_photo {
+    max-height: 689px;
+    max-width: 390px;
+  }
+}
 .container .left-column_profession {
   position: absolute;
   bottom: 0;
@@ -120,12 +149,24 @@ a, button, li {
   font-size: clamp(1.5rem, 0.5217rem + 2.8986vw, 4rem);
   background-color: rgb(18, 18, 18);
   color: rgb(255, 255, 255);
-  max-width: 100%;
+  width: 100%;
+}
+@media screen and (max-width: 1600px) {
+  .container .left-column_profession {
+    padding: 14px 40px;
+  }
 }
 @media screen and (max-width: 992px) {
   .container .left-column_profession {
     padding: 12px 62px;
     font-size: 36px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .left-column_profession {
+    max-width: 100%;
+    position: relative;
+    margin-bottom: 16px;
   }
 }
 .container .right-column {
@@ -135,6 +176,12 @@ a, button, li {
   background-image: url("../img/background.png");
   background-size: cover;
   background-position: center;
+  background-repeat: no-repeat;
+}
+@media screen and (max-width: 1300px) {
+  .container .right-column {
+    padding: 25px;
+  }
 }
 @media screen and (max-width: 992px) {
   .container .right-column {
@@ -145,17 +192,47 @@ a, button, li {
     max-width: 62%;
   }
 }
+@media screen and (max-width: 540px) {
+  .container .right-column {
+    max-width: 100%;
+    height: auto;
+    padding: 0;
+    margin: 0 auto;
+    padding: 0 50px 16px 50px;
+    background-image: none;
+  }
+}
 .container .right-column_name {
   font-size: clamp(1.5rem, 0.913rem + 1.7391vw, 3rem);
   margin-bottom: 28px;
+}
+@media screen and (max-width: 1600px) {
+  .container .right-column_name {
+    margin-bottom: 20px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .right-column_name {
+    margin-bottom: 10px;
+  }
 }
 .container .right-column_city {
   font-size: clamp(1.125rem, 0.9783rem + 0.4348vw, 1.5rem);
   margin-bottom: 58px;
 }
+@media screen and (max-width: 1600px) {
+  .container .right-column_city {
+    margin-bottom: 20px;
+  }
+}
 @media screen and (max-width: 992px) {
   .container .right-column_city {
     margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .right-column_city {
+    margin-bottom: 10px;
   }
 }
 .container .right-column .navigation {
@@ -163,14 +240,35 @@ a, button, li {
   gap: 30px;
   margin-bottom: 57px;
 }
+@media screen and (max-width: 1600px) {
+  .container .right-column .navigation {
+    margin-bottom: 20px;
+  }
+}
 @media screen and (max-width: 992px) {
   .container .right-column .navigation {
     margin-bottom: 34px;
   }
 }
+@media screen and (max-width: 540px) {
+  .container .right-column .navigation {
+    margin-bottom: 16px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .right-column .navigation__link-logo {
+    width: 32px;
+    height: 32px;
+  }
+}
 .container .right-column .stack-title {
   font-size: clamp(1.25rem, 0.9565rem + 0.8696vw, 2rem);
   margin-bottom: 25px;
+}
+@media screen and (max-width: 1600px) {
+  .container .right-column .stack-title {
+    margin-bottom: 20px;
+  }
 }
 .container .right-column .stack__list {
   display: flex;
@@ -178,10 +276,21 @@ a, button, li {
   gap: 25px;
   margin-bottom: 40px;
 }
+@media screen and (max-width: 1600px) {
+  .container .right-column .stack__list {
+    margin-bottom: 20px;
+  }
+}
 @media screen and (max-width: 992px) {
   .container .right-column .stack__list {
     gap: 20px;
     margin-bottom: 30px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .right-column .stack__list {
+    margin-bottom: 16px;
+    gap: 16px;
   }
 }
 .container .right-column .stack__list-item {
@@ -194,17 +303,37 @@ a, button, li {
 .container .right-column .stack__list-item:hover {
   background-color: rgb(6, 6, 6);
 }
+@media screen and (max-width: 540px) {
+  .container .right-column .stack__list-item {
+    padding: 8px 35px;
+  }
+}
 .container .right-column .about {
   margin-bottom: 66px;
+}
+@media screen and (max-width: 1600px) {
+  .container .right-column .about {
+    margin-bottom: 20px;
+  }
 }
 @media screen and (max-width: 992px) {
   .container .right-column .about {
     margin-bottom: 20px;
   }
 }
+@media screen and (max-width: 540px) {
+  .container .right-column .about {
+    margin-bottom: 10px;
+  }
+}
 .container .right-column .about-title {
   font-size: clamp(1.25rem, 0.9565rem + 0.8696vw, 2rem);
   margin-bottom: 20px;
+}
+@media screen and (max-width: 540px) {
+  .container .right-column .about-title {
+    margin-bottom: 10px;
+  }
 }
 .container .right-column .about-descrip {
   font-size: clamp(1rem, 0.6087rem + 1.1594vw, 2rem);
@@ -219,6 +348,11 @@ a, button, li {
 @media screen and (max-width: 992px) {
   .container .right-column .form {
     gap: 20px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .right-column .form {
+    gap: 16px;
   }
 }
 .container .right-column .form-email, .container .right-column .form-message {
@@ -245,15 +379,31 @@ a, button, li {
     font-size: 24px;
   }
 }
+@media screen and (max-width: 540px) {
+  .container .right-column .form-email::-moz-placeholder, .container .right-column .form-message::-moz-placeholder {
+    font-size: 16px;
+  }
+  .container .right-column .form-email::placeholder, .container .right-column .form-message::placeholder {
+    font-size: 16px;
+  }
+}
 @media screen and (max-width: 1380px) {
   .container .right-column .form-email, .container .right-column .form-message {
     width: 100%;
+    padding: 3px 0 10px 16px;
   }
 }
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 1200px) {
   .container .right-column .form-email, .container .right-column .form-message {
     width: 232px;
     padding: 3px 0 10px 16px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .right-column .form-email, .container .right-column .form-message {
+    width: 180px;
+    height: 35px;
+    padding: 0px 0 12px 10px;
   }
 }
 .container .right-column .form-submit {
@@ -264,10 +414,21 @@ a, button, li {
   font-size: clamp(1rem, 0.6087rem + 1.1594vw, 2rem);
   width: 702px;
 }
+@media screen and (max-width: 1380px) {
+  .container .right-column .form-submit {
+    width: 100%;
+    padding: 10px 0;
+  }
+}
 @media screen and (max-width: 992px) {
   .container .right-column .form-submit {
     width: 484px;
     padding: 10px 134px;
+  }
+}
+@media screen and (max-width: 540px) {
+  .container .right-column .form-submit {
+    padding: 8px 0 8px 10px;
   }
 }
 .container .right-column .form-submit:hover {
@@ -279,10 +440,9 @@ a, button, li {
 
 @media (max-width: 992px) {
   .stack__list-item:nth-child(4) {
-    order: 5; /* Первый элемент (flex) остается слева */
+    order: 5;
   }
   .stack__list-item:nth-child(5) {
-    order: 4; /* Второй элемент (БЭМ) перемещается вправо */
-    /* Отодвигает элемент вправо */
+    order: 4;
   }
 }/*# sourceMappingURL=style.css.map */
