--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -4,14 +4,31 @@
   font-family: "Roboto-Medium", sans-serif;
   font-weight: 500;
 
+  @media screen and (max-width:540px){
+    display: block;
+    padding: 0 25px 10px 25px;
+    overflow-y: scroll; 
+    background-image: url('../img/background.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat; 
+  }
+
   .left-column {
     position: relative;
     max-width: 34%;
     height: 100%;
-
+    
     @media screen and (max-width:992px){
         max-width: 38%;
-      }
+    }
+
+    @media screen and (max-width:540px){
+      max-width: 100%;
+      padding: 0 50px;
+      margin: 0 auto;
+      height: fit-content;
+    }
 
     &_photo {
       height: auto;
@@ -20,6 +37,11 @@
       @media screen and (max-width:1920px){
         height: 100%;
         object-fit: cover;
+      }
+
+      @media screen and (max-width:540px){
+        max-height: 689px;
+        max-width: 390px;
       }
     }
 
@@ -31,12 +53,22 @@
       font-size: clamp(1.5rem, 0.5217rem + 2.8986vw, 4rem);
       background-color:rgba(18, 18, 18, 1);
       color:rgba(255, 255, 255, 1);
-      max-width: 100%;
+      width: 100%;
+
+      @media screen  and (max-width:1600px) {
+        padding: 14px 40px;
+      }
 
       @media screen  and (max-width:992px) {
         padding: 12px 62px;
         font-size: 36px;
-        }
+      }
+
+      @media screen and (max-width:540px){
+        max-width: 100%;
+        position: relative;
+        margin-bottom:16px;
+      }
     }
   }
 
@@ -47,6 +79,11 @@
     background-image: url('../img/background.png');
     background-size: cover;
     background-position: center;
+    background-repeat: no-repeat; 
+
+    @media screen and (max-width:1300px){
+      padding: 25px;
+    }
 
     @media screen  and (max-width:992px) {
       padding: 20px 0 20px 45px; 
@@ -55,19 +92,44 @@
       background-repeat: no-repeat; 
       max-width: 62%;
     }
+
+    @media screen and (max-width:540px){
+      max-width: 100%;
+      height: auto;
+      padding: 0;
+      margin: 0 auto;
+      padding: 0 50px 16px 50px;
+      background-image: none;
+    }
     
     &_name {
       font-size: clamp(1.5rem, 0.913rem + 1.7391vw, 3rem);
       margin-bottom: 28px;
+
+      @media screen and (max-width:1600px){
+        margin-bottom: 20px;
+      }
+
+      @media screen and (max-width:540px){
+        margin-bottom: 10px;
+      }
     }
 
     &_city {
       font-size: clamp(1.125rem, 0.9783rem + 0.4348vw, 1.5rem);
       margin-bottom: 58px;
 
+      @media screen and (max-width:1600px){
+        margin-bottom: 20px;
+      }
+
       @media screen  and (max-width:992px) {
         margin-bottom: 30px;
-        }
+      }
+
+      @media screen  and (max-width:540px) {
+        margin-bottom: 10px;
+      }
     }
 
     .navigation {
@@ -75,15 +137,35 @@
       gap: 30px;
       margin-bottom: 57px;
 
+      @media screen and (max-width:1600px){
+        margin-bottom: 20px;
+      }
+
       @media screen  and (max-width:992px) {
         margin-bottom: 34px;
+      }
+
+      @media screen  and (max-width:540px) {
+        margin-bottom: 16px;
+      }
+
+      &__link-logo {
+
+        @media screen  and (max-width:540px) {
+          width: 32px;
+          height: 32px;
         }
+      }
     }
 
     .stack {
       &-title {
         font-size: clamp(1.25rem, 0.9565rem + 0.8696vw, 2rem);
         margin-bottom: 25px;
+
+        @media screen and (max-width:1600px){
+          margin-bottom: 20px;
+        }
       }
 
       &__list {
@@ -92,9 +174,18 @@
         gap: 25px;
         margin-bottom: 40px;
 
+        @media screen and (max-width:1600px){
+          margin-bottom: 20px;
+        }
+
         @media screen  and (max-width:992px) {
           gap: 20px;    
           margin-bottom: 30px;
+        }
+
+        @media screen  and (max-width:540px) {
+          margin-bottom: 16px;
+          gap: 16px;
         }
 
         &-item {
@@ -103,9 +194,13 @@
           background-color: rgba(65, 65, 65, 1);
           border-radius: 45px;
           color: rgba(255, 255, 255, 1);
+
           &:hover {
             background-color: rgb(6, 6, 6);
-            // transition: scale;
+          }
+
+          @media screen and (max-width:540px){
+            padding: 8px 35px;
           }
         }
       }
@@ -113,14 +208,25 @@
     .about {
       margin-bottom: 66px;
 
+      @media screen and (max-width:1600px){
+        margin-bottom: 20px;
+      }
+
       @media screen  and (max-width:992px) {
         margin-bottom: 20px;
       }
 
-
+      @media screen  and (max-width:540px) {
+        margin-bottom: 10px;
+      }
+      
       &-title {
         font-size: clamp(1.25rem, 0.9565rem + 0.8696vw, 2rem);
         margin-bottom: 20px;
+
+        @media screen  and (max-width:540px) {
+          margin-bottom: 10px;
+        }
       }
 
       &-descrip {
@@ -136,8 +242,12 @@
       gap: 25px;
 
       @media screen  and (max-width:992px) {
-          gap: 20px;
-        }
+        gap: 20px;
+      }
+
+      @media screen and (max-width:540px){
+        gap: 16px;
+      }
 
       &-email, &-message {
         width: 338px;
@@ -152,20 +262,29 @@
         &::placeholder {
           font-family: 'Roboto-Medium', sans-serif;
 
-          
-
           @media screen  and (max-width:992px) {
-          font-size: 24px;
-        }
+            font-size: 24px;
+          }
+
+          @media screen  and (max-width:540px) {
+            font-size: 16px;
+          }
         }
 
         @media screen and (max-width:1380px){
-            width: 100%;
-          }
+          width: 100%;
+          padding: 3px 0 10px 16px;
+        }
 
-        @media screen  and (max-width:992px) {
+        @media screen  and (max-width:1200px) {
           width: 232px;
           padding: 3px 0 10px 16px;
+        }
+        
+        @media screen and (max-width:540px){
+          width: 180px;
+          height: 35px;
+          padding: 0px 0 12px 10px;
         }
       }
 
@@ -177,9 +296,18 @@
         font-size: clamp(1rem, 0.6087rem + 1.1594vw, 2rem);
         width: 702px;
 
+        @media screen and (max-width:1380px){
+          width: 100%;
+          padding: 10px 0 ;
+        }
+
         @media screen  and (max-width:992px) {
           width: 484px;
           padding: 10px 134px;
+        }
+
+        @media screen and (max-width:540px){
+          padding: 8px 0 8px 10px;
         }
 
         &:hover {
@@ -194,12 +322,11 @@
 }
 
 @media (max-width: 992px) {
-            .stack__list-item:nth-child(4) {
-                order: 5; /* Первый элемент (flex) остается слева */
-            }
+  .stack__list-item:nth-child(4) {
+    order: 5; 
+  }
 
-            .stack__list-item:nth-child(5) {
-                order: 4; /* Второй элемент (БЭМ) перемещается вправо */
-               /* Отодвигает элемент вправо */
-            }
-        }
+  .stack__list-item:nth-child(5) {
+    order: 4; 
+  }
+}
