--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -48,16 +48,12 @@
     &_profession {
       position: absolute;
       bottom: 0;
-      padding: 14px 96px;
+      padding: 14px 65px;
       font-family: "Roboto-Regular", sans-serif;
       font-size: clamp(1.5rem, 0.5217rem + 2.8986vw, 4rem);
       background-color:rgba(18, 18, 18, 1);
       color:rgba(255, 255, 255, 1);
       width: 100%;
-
-      @media screen  and (max-width:1600px) {
-        padding: 14px 40px;
-      }
 
       @media screen  and (max-width:992px) {
         padding: 12px 62px;
@@ -79,6 +75,10 @@
     background-image: url('../img/background.png');
     background-size: cover;
     background-position: center;
+
+    @media screen  and (max-width:1690px) {
+      padding: 30px; 
+    }
 
     @media screen and (max-width:1300px){
       padding: 25px;
